--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "typescript": "~3.7.2"
+    "styled-components": "^5.0.1",
+    "typescript": "^3.7.5",
+    "typescript-styled-plugin": "^0.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
