--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/styled-components": "^4.4.3",
     "bootstrap": "^4.4.1",
+    "mdbreact": "^4.25.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
